# ap-swarm-launcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  tbump.toml
src/ap_swarm_launcher/: async_process_runner.py  constants.py  formations.py  locations.py  sitl.py  udp_serial_bridge.py  utils.py  version.py
src/ap_swarm_launcher/cli/: main.py
src/ap_swarm_launcher/resources/: copter-default.parm  copter-skybrush.parm
